--- a/wp-content/themes/schlemmer/css/scss/_page-about.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-about.scss
@@ -394,7 +394,7 @@ body.page-template-page-about {
 						width:16px;
 						opacity: 1;
 						color: #fff;
-						font-size:20px;
+						font-size:32px;
 					}
 				}
 			}
@@ -432,11 +432,11 @@ body.page-template-page-about {
 	margin: 50px 0 67px;
 	text-align: center;
 	h1 {
-		font-size: 53px;
+		font-size: 80px;
 		margin-left: 0;
 	}
 	span.small_header {
-		font-size: 17px;
+		//font-size: 17px;
 		letter-spacing: 10px;
 		margin-left:auto;
 		margin-right:auto;
@@ -487,11 +487,11 @@ body.page-template-page-about {
 .int_about {
 	margin: 29px 0 33px;
 	h1 {
-		font-size: 35px;
+		
 		
 	}
 	span.small_header {
-		font-size: 13px;
+// 		font-size: 13px;
 		letter-spacing: 6px;
 		margin-left:auto;
 		margin-right:auto;
