--- a/wp-content/themes/schlemmer/css/scss/_page-about.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-about.scss
@@ -434,13 +434,15 @@ body.page-template-page-about {
 	h1 {
 		font-size: 80px;
 		margin-left: 0;
+		padding-bottom:12px;
+		
 	}
 	span.small_header {
 		//font-size: 17px;
 		letter-spacing: 10px;
 		margin-left:auto;
 		margin-right:auto;
-		margin-top:4px;
+		margin-top:0px;
 		
 	}
 }
