--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-six.scss
@@ -60,6 +60,7 @@
 		letter-spacing: 8.5px;
 		position: relative;
 		padding-top:17px;
+		transition: all .2s ease-in-out;
 		&:before {
 			content:"";
 			width:29px;
@@ -70,6 +71,13 @@
 			position: absolute;
 			top:24px;
 			left:-35px;
+			transition: all .2s ease-in-out;
+		}
+		&:hover {
+			color:#fff;
+			&:before {
+				background: #fff;
+			}
 		}
 	}
 }
